--- a/la-comanda-final/package.json
+++ b/la-comanda-final/package.json
@@ -15,6 +15,7 @@
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.574.0",
+    "motion": "^12.34.3",
     "react": "^19.2.4",
     "react-dom": "^19.2.4"
   },
